--- a/index.html
+++ b/index.html
@@ -24,22 +24,84 @@
     }
 
     .popup-content {
-        max-height: 100px;
-     overflow-y: auto;
-     padding-right: 5px;
-     }
+    max-height: 200px;      /* controls scroll area height */
+    overflow-y: auto;       /* enables vertical scroll */
+    overflow-x: hidden;
+    padding-right: 6px;
+  }
 
-    .popup-images img {
-        width: 150px;
-     margin-bottom: 10px;
-        display: block;
-    }
+  .popup-images img {
+    width: 150px;
+    margin-bottom: 10px;
+    display: block;
+  }
+  #info-panel {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    width: 260px;
+    background: white;
+    border-radius: 6px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    z-index: 1000;
+    font-size: 14px;
+  }
+
+  #info-header {
+    background: #333;
+    color: white;
+    padding: 8px;
+    cursor: move;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  #info-content {
+    padding: 10px;
+  }
+
+  #close-btn {
+    cursor: pointer;
+  }
+
+
   </style>
 </head>
 
 <body>
 
 <div id="map"></div>
+
+<!-- floating thing  -->
+
+<div id="info-panel">
+  <div id="info-header">
+    Jebel Aruda Sealing Motifs
+    <span id="close-btn">✕</span>
+  </div>
+
+  <div id="info-content">
+    <strong>Key:</strong><br>
+    <span style="color:#1f78b4;">● Blue</span> – Human Depictions<br>
+    <span style="color:#e31a1c;">● Red</span> – Caprids<br>
+    <span style="color:#33a02c;">● Green</span> – Mixed / Animal<br>
+    <span style="color:#6a3d9a;">● Purple</span> – Architectural / Geometric<br><br>
+
+    <strong>Source:</strong><br>
+    Site map, motif images, and find spots sourced from: <br>
+    van Driel, Govert, and Carol van Driel-Murray. Jebel Aruda: An Uruk Period Temple and Settlement in Syria. Volume I: Excavation and Material Culture. Papers on Archaeology of the Leiden Museum of Antiquities 28a. Leiden: Sidestone Press, 2023. https://doi.org/10.59641/mch0f9df.<br>
+    <br>
+    Site coded by Charlotte Gilmore, UChicago MA (CMES) 2027.
+  </div>
+</div>
+
+
+
+
+
+
 
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
@@ -65,7 +127,7 @@ function getColor(type) {
   if (type === "Blue") return "#1f78b4";
   if (type === "Red") return "#e31a1c";
   if (type === "Green") return "#33a02c";
-  if (type == "Purple") return "33a28g";
+  if (type === "Purple") return "#6a3d9a";
   return "#6a3d9a"; // default color
 }
 
@@ -75,66 +137,79 @@ function getColor(type) {
 var seals = [
 
   // human depictions
-  { id: "JA395", room: "S64", type: "Blue", coords: [950, 1400], image: "images/ja395.jpg" },
-  { id: "JA396", room: "S64", type: "Blue", coords: [950, 1400], image: "images/ja396.jpg" },
-  { id: "JA249", room: "S36", type: "Blue", coords: [950, 1400], image: "images/ja249.jpg" },
-  { id: "JA309", room: "S36", type: "Blue", coords: [950, 1400], image: "images/ja309.jpg" },
-  { id: "JA312", room: "S36", type: "Blue", coords: [900, 1400], image: "images/ja312.jpg" },
-  { id: "JA246", room: "S36", type: "Blue", coords: [900, 1400], image: "images/ja246.jpg" },
-  { id: "JA536", room: "S69", type: "Blue", coords: [900, 1400], image: "images/ja536.jpg" },
-  { id: "JA513", room: "S69", type: "Blue", coords: [900, 1400], image: "images/ja513.jpg" },
-  { id: "JA269", room: "S36", type: "Blue", coords: [900, 1400], image: "images/ja269.jpg" },
-  { id: "JA170", room: "S22", type: "Blue", coords: [900, 1400], image: "images/ja170.jpg" },
-  { id: "JA378", room: "S22", type: "Blue", coords: [900, 1400], image: "images/ja378.jpg" }, // look at this one, not so straightforward
-  { id: "JA382", room: "S55", type: "Blue", coords: [900, 1400], image: "images/ja382.jpg" },
-  { id: "JA706", room: "S81", type: "Blue", coords: [900, 1400], image: "images/ja706.jpg" },
-  { id: "JA1352", room: "S89", type: "Blue", coords: [900, 1400], image: "images/ja1352.jpg" },
-  { id: "JA715", room: "S72", type: "Blue", coords: [900, 1400], image: "images/ja715.jpg" }, // human caprid etc mixed scene
+  { id: "JA395", room: "S64", type: "Blue", coords: [892, 308], image: "images/ja395.jpg" },
+  { id: "JA396", room: "S64", type: "Blue", coords: [892, 308], image: "images/ja396.jpg" },
+  { id: "JA249", room: "S36", type: "Blue", coords: [708, 2715], image: "images/ja249.jpg" },
+  { id: "JA309", room: "S36", type: "Blue", coords: [708, 2715], image: "images/ja309.jpg" },
+  { id: "JA312", room: "S36", type: "Blue", coords: [708, 2715], image: "images/ja312.jpg" },
+  { id: "JA246", room: "S36", type: "Blue", coords: [708, 2715], image: "images/ja246.jpg" },
+ // { id: "JA536", room: "S69", type: "Blue", coords: [900, 1400], image: "images/ja536.jpg" }, // not logged! 
+//  { id: "JA513", room: "S69", type: "Blue", coords: [900, 1400], image: "images/ja513.jpg" },
+  { id: "JA269", room: "S36", type: "Blue", coords: [708, 2715], image: "images/ja269.jpg" },
+  { id: "JA170", room: "S22", type: "Blue", coords: [1046, 2357], image: "images/ja170.jpg" },
+  { id: "JA378", room: "S22", type: "Blue", coords: [1046, 2357], image: "images/ja378.jpg" }, // look at this one, not so straightforward
+  { id: "JA382", room: "S55", type: "Blue", coords: [1290, 500], image: "images/ja382.jpg" },
+ // { id: "JA1352 - actual seal", room: "S89", type: "Blue", coords: [900, 1400], image: "images/ja1352.jpg" },
+ // { id: "JA715", room: "S72", type: "Blue", coords: [900, 1400], image: "images/ja715.jpg" }, // human caprid etc mixed scene
 
 
 
 
   // caprids
-  { id: "JA245", room: "S36", type: "Red", coords: [900, 1400], image: "images/ja245.jpg" },
-  { id: "JA279", room: "S36", type: "Red", coords: [900, 1400], image: "images/ja279.jpg" },
-  { id: "JA263", room: "S36", type: "Red", coords: [900, 1400], image: "images/ja263.jpg" },
-  { id: "JA310", room: "S36", type: "Red", coords: [900, 1400], image: "images/ja310.jpg" },
-  { id: "JA153", room: "S9", type: "Red", coords: [900, 1400], image: "images/ja153.jpg" },
-  { id: "JA125", room: "S8", type: "Red", coords: [900, 1400], image: "images/ja125.jpg" },
-  { id: "JA129", room: "S8", type: "Red", coords: [900, 1400], image: "images/ja129.jpg" },
-  { id: "JA180", room: "S22", type: "Red", coords: [900, 1400], image: "images/ja180.jpg" },
-  { id: "JA568", room: "S69", type: "Red", coords: [900, 1400], image: "images/ja568.jpg" },
-  { id: "JA577", room: "S69", type: "Red", coords: [900, 1400], image: "images/ja577.jpg" },
-  { id: "JA512", room: "S69", type: "Red", coords: [900, 1400], image: "images/ja512.jpg" },
-
+  { id: "JA245", room: "S36", type: "Red", coords: [645, 2718], image: "images/ja245.jpg" },
+  { id: "JA279", room: "S36", type: "Red", coords: [645, 2718], image: "images/ja279.jpg" },
+  { id: "JA263", room: "S36", type: "Red", coords: [645, 2718], image: "images/ja263.jpg" },
+  { id: "JA310", room: "S36", type: "Red", coords: [645, 2718], image: "images/ja310.jpg" },
+  { id: "JA282", room: "S36", type: "Red", coords: [645, 2718], image: "images/ja282.jpg" },
+  { id: "JA153", room: "S9", type: "Red", coords: [1140, 2046], image: "images/ja153.jpg" },
+  { id: "JA125", room: "S8", type: "Red", coords: [1278, 2148], image: "images/ja125.jpg" },
+  { id: "JA129", room: "S8", type: "Red", coords: [1278, 2148], image: "images/ja129.jpg" },
+  { id: "JA180", room: "S22", type: "Red", coords: [1046, 2428], image: "images/ja180.jpg" },
+  { id: "JA568", room: "S69", type: "Red", coords: [684, 236], image: "images/ja568.jpg" },
+  { id: "JA577", room: "S69", type: "Red", coords: [684, 236], image: "images/ja577.jpg" },
+  { id: "JA526", room: "S69", type: "Red", coords: [684, 236], image: "images/ja526.jpg" },
+  { id: "JA512", room: "S69", type: "Red", coords: [684, 236], image: "images/ja512.jpg" },
+  { id: "JA24", room: "S3", type: "Red", coords: [712, 1996], image: "images/ja24.jpg" },
+  { id: "JA27", room: "S3", type: "Red", coords: [712, 1996], image: "images/ja27.jpg" },
 
 
 
 
 
     // other? 
-    { id: "JA253", room: "S36", type: "Green", coords: [900, 1400], image: "images/ja253.jpg" },
-    { id: "JA286", room: "S36", type: "Green", coords: [900, 1400], image: "images/ja286.jpg" },
-    { id: "JA289", room: "S36", type: "Green", coords: [900, 1400], image: "images/ja289.jpg" },
-    { id: "JA176", room: "S36", type: "Green", coords: [900, 1400], image: "images/ja176.jpg" }, //this is caprid and lion so idk where i wanna put it
-    { id: "JA367", room: "S58", type: "Green", coords: [900, 1400], image: "images/ja367.jpg" }, // quadruped and pots
-    { id: "JA619", room: "S69", type: "Purple", coords: [900, 1400], image: "images/ja619.jpg" }, // birds? giraffe?
-    { id: "JA679", room: "S69", type: "Green", coords: [900, 1400], image: "images/ja679.jpg" }, // lion and quadruped
-    { id: "JA620", room: "S69", type: "Green", coords: [900, 1400], image: "images/ja620.jpg" }, // lion frieze
+    { id: "JA286", room: "S36", type: "Green", coords: [647, 2682], image: "images/ja286.jpg" },
+    { id: "JA289", room: "S36", type: "Green", coords: [647, 2682], image: "images/ja289.jpg" },
+    { id: "JA176", room: "S36", type: "Green", coords: [647, 2682], image: "images/ja176.jpg" }, //this is caprid and lion so idk where i wanna put it
+    { id: "JA367", room: "S58", type: "Green", coords: [1024, 312], image: "images/ja367.jpg" }, // quadruped and pots
+    { id: "JA619", room: "S69", type: "Purple", coords: [524, 248], image: "images/ja619.jpg" }, // birds? giraffe?
+    { id: "JA679", room: "S69", type: "Green", coords: [524, 248], image: "images/ja679.jpg" }, // lion and quadruped
+    { id: "JA620", room: "S69", type: "Green", coords: [524, 248], image: "images/ja620.jpg" }, // lion frieze
+   // { id: "JA723", room: "Temple", type: "Green", coords: [900, 1400], image: "images/ja723.jpg" }, // lion 
+   // { id: "JA498", room: "Temple", type: "Green", coords: [900, 1400], image: "images/ja493.jpg" }, // lion 
+   // { id: "JA716", room: "S72", type: "Green", coords: [900, 1400], image: "images/ja716.jpg" }, // lion 
+
+   
+   // actual seals
+    { id: "JA26 - Actual Seal", room: "SIR1", type: "Green", coords: [942, 2009], image: "images/ja26.jpg" }, // fishies
+   // { id: "JA706 - Actual Seal", room: "S81", type: "Blue", coords: [900, 1400], image: "images/ja706.jpg" },
+    { id: "JA360 - actual seal", room: "S55", type: "Green", coords: [1288, 326], image: "images/ja360.jpg" }, // maybe architectual, check this
+
 
 
 
 
     // pots and tassels
-    { id: "JA126", room: "S36", type: "Purple", coords: [900, 1400], image: "images/ja126.jpg" },
+    { id: "JA126", room: "S36", type: "Purple", coords: [707, 2681], image: "images/ja126.jpg" },
+    { id: "JA253", room: "S36", type: "Green", coords: [707, 2681], image: "images/ja253.jpg" },
+
 
     // geometric
-    { id: "JA360", room: "S55", type: "Green", coords: [900, 1400], image: "images/ja360.jpg" }, // maybe architectual, check this
-    { id: "JA750", room: "S89", type: "Purple", coords: [900, 1400], image: "images/ja750.jpg" }, // stamp seal
-    { id: "JA623", room: "S69", type: "Purple", coords: [900, 1400], image: "images/ja623.jpg" },
+   // { id: "JA750- actual seal", room: "S89", type: "Purple", coords: [900, 1400], image: "images/ja750.jpg" }, // stamp seal
+    { id: "JA623", room: "S69", type: "Purple", coords: [436, 152], image: "images/ja623.jpg" },
 
     // architectural
-    { id: "JA562", room: "S69", type: "Purple", coords: [900, 1400], image: "images/ja562.jpg" }
+    { id: "JA562", room: "S69", type: "Purple", coords: [592, 176], image: "images/ja562.jpg" },
+    { id: "JA107", room: "S3", type: "Purple", coords: [658, 2050], image: "images/ja107.jpg" }
 
 ];
 
@@ -183,25 +258,33 @@ Object.values(grouped).forEach(function(group) {
 
 
   //  popup
-  var popupContent = `
-  <div style="width:220px;">
-    <strong>${group.room}</strong><br>
-    Type: ${group.type}<br>
-    Total: ${count}<br><br>
-    <div class="popup-content popup-images">
-`;
+//   var popupContent = `
+//   <div style="width:220px;">
+//     <strong>${group.room}</strong><br>
+//     Type: ${group.type}<br>
+//     Total: ${count}<br><br>
+//     <div class="popup-content popup-images">
+// `;
 
-group.seals.forEach(function(seal) {
-  popupContent += `
-    <strong>${seal.id}</strong><br>
-    <img src="${seal.image}">
+// // group.seals.forEach(function(seal) {
+// //   popupContent += `
+// //     <strong>${seal.id}</strong><br>
+// //     <img src="${seal.image}">
+// //   `;
+// // });
+
+// popupContent += `
+//     </div>
+//   </div>
+// `;
+
+var popupContent = `
+    <div style="width:220px;">
+      <strong>${group.room}</strong><br>
+      Type: ${group.type}<br>
+      Total: ${count}<br><br>
+      <div class="popup-content popup-images">
   `;
-});
-
-popupContent += `
-    </div>
-  </div>
-`;
 
   group.seals.forEach(function(seal) {
     popupContent += `
@@ -210,17 +293,63 @@ popupContent += `
     `;
   });
 
-  popupContent += "</div>";
+  popupContent += `
+      </div>
+    </div>
+  `;
 
-  marker.bindPopup(popupContent);
+  // group.seals.forEach(function(seal) {
+  //   popupContent += `
+  //     <strong>${seal.id}</strong><br>
+  //     <img src="${seal.image}">
+  //   `;
+  // });
 
+  // popupContent += "</div>";
+
+  marker.bindPopup(popupContent, {
+    maxWidth: 250,
+    maxHeight: 300
+  });
 });
 
 
 // map clicking coords
 
 map.on('click', function(e) {
-  console.log(e.latlng);
+  console.log("Coordinates:", 
+    Math.round(e.latlng.lat), 
+    Math.round(e.latlng.lng)
+  );
+});
+
+
+var panel = document.getElementById("info-panel");
+var header = document.getElementById("info-header");
+
+var isDragging = false;
+var offsetX, offsetY;
+
+header.addEventListener("mousedown", function(e) {
+  isDragging = true;
+  offsetX = e.clientX - panel.offsetLeft;
+  offsetY = e.clientY - panel.offsetTop;
+});
+
+document.addEventListener("mousemove", function(e) {
+  if (isDragging) {
+    panel.style.left = (e.clientX - offsetX) + "px";
+    panel.style.top = (e.clientY - offsetY) + "px";
+  }
+});
+
+document.addEventListener("mouseup", function() {
+  isDragging = false;
+});
+
+// Close button
+document.getElementById("close-btn").addEventListener("click", function() {
+  panel.style.display = "none";
 });
 
 </script>
