--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@ var seals = [
   { id: "JA309", room: "S36", type: "Human", coords: [708, 2715], image: "images/ja309.jpg" },
   { id: "JA312", room: "S36", type: "Human", coords: [708, 2715], image: "images/ja312.jpg" },
   { id: "JA246", room: "S36", type: "Human", coords: [708, 2715], image: "images/ja246.jpg" },
- // { id: "JA536", room: "S69", type: "Blue", coords: [900, 1400], image: "images/ja536.jpg" }, // not logged! 
-//  { id: "JA513", room: "S69", type: "Blue", coords: [900, 1400], image: "images/ja513.jpg" },
+  { id: "JA536", room: "S69", type: "Human", coords: [900, 1400], image: "images/ja536.jpg" }, 
+  { id: "JA513", room: "S69", type: "Human", coords: [900, 1400], image: "images/ja513.jpg" },
   { id: "JA269", room: "S36", type: "Human", coords: [708, 2715], image: "images/ja269.jpg" },
   { id: "JA170", room: "S22", type: "Human", coords: [1046, 2357], image: "images/ja170.jpg" },
   { id: "JA378", room: "S22", type: "Human", coords: [1046, 2357], image: "images/ja378.jpg" }, // look at this one, not so straightforward
