--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     }
 
     .popup-content {
-    max-height: 200px;      /* controls scroll area height */
-    overflow-y: auto;       /* enables vertical scroll */
+    max-height: 200px;      
+    overflow-y: auto;       
     overflow-x: hidden;
     padding-right: 6px;
   }
@@ -95,7 +95,7 @@
     Site map, motif images, and find spots sourced from: <br>
     van Driel, Govert, and Carol van Driel-Murray. Jebel Aruda: An Uruk Period Temple and Settlement in Syria. Volume I: Excavation and Material Culture. Papers on Archaeology of the Leiden Museum of Antiquities 28a. Leiden: Sidestone Press, 2023. https://doi.org/10.59641/mch0f9df.<br>
     <br>
-    Site coded by Charlotte Gilmore, M.A., University of Chicago, Center for Middle Eastern Studies (CMES), 2027.  </div>
+    Coded by Charlotte Gilmore, M.A., University of Chicago, Center for Middle Eastern Studies (CMES), 2027.  </div>
 </div>
 
 
@@ -135,7 +135,7 @@ map.fitBounds(bounds);
   };
 
   function getColor(type) {
-    return typeColors[type] || "#000000"; // black as fallback if type is wrong
+    return typeColors[type] || "#000000"; 
   }
 
 
