glitching out w background

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     body { margin:0; }
     #map { height: 100vh; }
 
-    .leaflet-container {
+    /* .leaflet-container {
       background: #99c2dc
-      ;
+      ; */
 
     .seal-marker {
       width:32px;
